# MistralHackerLaVideo

./: .env_exemple  .gitignore  README.md  example_podcast_generation.py  main.py  pyproject.toml
script_processing/: generate_assets.py  generate_paper.py  generate_script.py  type.py
src/schema/: script_podcast.py  script_video.py
tst/: tst.py
video_processing/: generate_video.py
video_remotion/: package.json  pnpm-lock.yaml
video_remotion/public/2404.02905/: rich.json  subtitles.srt
video_remotion/src/remotion/: Root.tsx
video_remotion/src/remotion/ArxflixComp/: Main.tsx
